# cohort-builder

./: .env.example  .gitignore  DESIGN_SYSTEM_COMPLETE.txt  Initial_schema_and_embedding_generation.ipynb  docker-compose.yml  quick-start.sh
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt  run.sh  run_celery_worker_dev.sh
backend/api/: __init__.py  admin.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_polly_api_key.py  0004_alter_userprofile_polly_api_key.py  0005_atlasprocessingtask.py  0006_cohortproject_chatmessage_and_more.py  0007_chatmessage_message_type_chatmessage_metadata_and_more.py  0008_fieldmapping.py  0009_cohortproject_shared_with.py
backend/api/models/: __init__.py  cohort.py  field_mapping.py  project.py  task.py  user.py
backend/api/serializers/: __init__.py  cohort_serializers.py  project_serializers.py
backend/api/services/agent/: __init__.py  agent_service.py  conversational_agent.py  ui_component_generator.py
backend/api/services/schema/: __init__.py  schema_generator.py
backend/api/storage/: __init__.py  atlas_file_cache.py  gcs_storage.py
backend/api/tasks/: __init__.py  atlas_tasks.py
backend/api/utils/: __init__.py  encryption.py  exceptions.py
backend/api/views/: __init__.py  auth_views.py  chat_views.py  cohort_project_views.py  cohort_views.py  field_mapping_views.py  polly_views.py
backend/cohort_backend/: __init__.py  asgi.py  auth_backends.py  authentication.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  (+5 more)
(+79 files in other folders)
